--- a/app/app.html
+++ b/app/app.html
@@ -31,18 +31,84 @@
     <script>
         requirejs(['app'], function (app) {});
     </script>
+    <script src="../bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="../bower_components/angular/angular.min.js"></script>
 </head>
 <body>
 
-    <div class="container">
-        <h1 id="greet"></h1>
-        <p class="subtitle">
-            Welcome to <a href="https://github.com/nwjs/nw.js" class="js-external-link">NW.js</a> app running on this magnificent <strong id="platform-info"></strong> machine.
-        </p>
-        <p class="subtitle">
-            You are in <strong id="env-name"></strong> environment.
-        </p>
+    <header>
+        <div class="logo"></div>
+        <div class="title">
+            Vice City 2
+        </div>
+        <div class="main-menu">
+            <ul>
+                <li>
+                    <a href="#">News</a>
+                </li>
+                <li class="active">
+                    <a href="#">Downloads</a>
+                </li>
+                <li>
+                    <a href="#">Contacts</a>
+                </li>
+                <li>
+                    <a href="#">Settings</a>
+                </li>
+            </ul>
+        </div>
+        <div class="alert"></div>
+        <div class="menu"></div>
+    </header>
+
+    <div class="side">
+        <div class="menu-block">
+            <div class="menu-title">
+                General
+            </div>
+            <ul>
+                <li>
+                    <a href="#">New Releases</a>
+                </li>
+                <li>
+                    <a href="#">Work In Progress</a>
+                </li>
+                <li>
+                    <a href="#">Most Popular</a>
+                </li>
+            </ul>
+        </div>
+        <div class="menu-block">
+            <div class="menu-title">
+                Categories
+            </div>
+            <ul>
+                <li>
+                    <a href="#">Cars</a>
+                </li>
+                <li class="active">
+                    <a href="#">Map</a>
+                </li>
+                <li>
+                    <a href="#">Textures</a>
+                </li>
+                <li>
+                    <a href="#">Guns</a>
+                </li>
+                <li>
+                    <a href="#">Music</a>
+                </li>
+            </ul>
+        </div>
     </div>
+
+    <div class="main">
+
+    </div>
+
+    <footer>
+
+    </footer>
 
 </body>
 </html>
