--- a/app/app.html
+++ b/app/app.html
@@ -107,6 +107,20 @@
     </div>
 
     <footer>
+        <div class="copy">
+            Revolution Team
+            <div class="soc-links">
+
+            </div>
+        </div>
+
+        <div class="update">
+            <a href="#">Update</a>
+        </div>
+
+        <div class="revision">
+            Your revision is 0.01 (new 0.02)
+        </div>
 
     </footer>
 
